<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/app_bg"
    android:orientation="vertical"
    tools:context=".Activity.Activity_Lucky_Number">

    <include layout="@layout/layout_header" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/ll_rashi_item"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_15sdp"
                android:layout_marginTop="@dimen/_15sdp"
                android:background="@drawable/all_usebg"
                android:orientation="horizontal"
                android:padding="@dimen/_5sdp">

                <TextView
                    android:id="@+id/tv_spinner_item"
                    style="@style/reg_TextviewStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="start"
                    android:paddingVertical="@dimen/_10sdp"
                    android:paddingStart="@dimen/_10sdp"
                    android:text="@string/choose_horoscope" />

                <ImageView
                    android:id="@+id/iv_dropdown"
                    android:layout_width="@dimen/_30sdp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end|center"
                    android:layout_marginEnd="@dimen/_5sdp"
                    android:adjustViewBounds="true"
                    android:src="@drawable/ic_dropdown" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_data"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="@dimen/_15sdp"
                android:layout_marginTop="@dimen/_15sdp"
                android:orientation="vertical"
                android:visibility="gone">

                <ImageView
                    android:layout_width="@dimen/_180sdp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:adjustViewBounds="true"
                    android:src="@drawable/img_lucky" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/all_usebg"
                    android:elevation="@dimen/_2sdp"
                    android:orientation="vertical"
                    android:padding="@dimen/_10sdp">

                    <TextView
                        android:id="@+id/tv_date"
                        style="@style/reg_TextviewStyle"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/today_date" />

                    <TextView
                        android:id="@+id/tv_lucky_number"
                        style="@style/reg_TextviewStyle"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginTop="@dimen/_5sdp"
                        android:justificationMode="inter_word"
                        android:text="@string/your_lucky_number_is" />

                    <TextView
                        android:id="@+id/tv_lucky_color"
                        style="@style/reg_TextviewStyle"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginVertical="@dimen/_3sdp"
                        android:justificationMode="inter_word"
                        android:text="@string/your_lucky_color_is" />

                    <TextView
                        android:id="@+id/tv_lucky_remedy"
                        style="@style/reg_TextviewStyle"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:justificationMode="inter_word"
                        android:text="@string/your_remedy_is" />
                </LinearLayout>
            </LinearLayout>

            <ImageView
                android:id="@+id/iv_no_choose"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginHorizontal="@dimen/_20sdp"
                android:layout_marginVertical="@dimen/_20sdp"
                android:layout_marginTop="@dimen/_20sdp"
                android:adjustViewBounds="true"
                android:src="@drawable/img_no_choose"
                android:visibility="visible" />

        </LinearLayout>
    </ScrollView>

</LinearLayout>