<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/app_bg"
    android:orientation="vertical"
    tools:context=".Activity.Activity_Confirmation">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:alpha="0.5"
            android:scaleType="fitXY"
            android:src="@drawable/star_alphabg" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scrollbars="none">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_30sdp" />

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/_30sdp"
                    android:adjustViewBounds="true"
                    android:src="@drawable/img_horoscope" />

                <TextView
                    style="@style/medium_TextviewStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_20sdp"
                    android:layout_marginTop="@dimen/_25sdp"
                    android:layout_marginEnd="@dimen/_10sdp"
                    android:letterSpacing="0.1"
                    android:text="@string/welcome"
                    android:textSize="@dimen/_18sdp" />

                <TextView
                    style="@style/bold_TextviewStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_20sdp"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:layout_marginEnd="@dimen/_10sdp"
                    android:letterSpacing="0.1"
                    android:text="@string/app_name"
                    android:textSize="@dimen/_22sdp" />

                <TextView
                    style="@style/medium_TextviewStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/_25sdp"
                    android:layout_marginTop="@dimen/_25sdp"
                    android:gravity="center"
                    android:letterSpacing="0.01"
                    android:text="@string/app_intro"
                    android:textSize="@dimen/_16sdp" />


            </LinearLayout>
        </ScrollView>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginHorizontal="@dimen/_10sdp"
                android:gravity="center"
                android:orientation="horizontal"
                android:paddingVertical="@dimen/_5sdp"
                android:paddingStart="@dimen/_5sdp">


                <CheckBox
                    android:id="@+id/cv_agree"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:button="@drawable/ic_checkbox"
                    android:checked="false" />

                <TextView
                    android:id="@+id/tv_policy"
                    style="@style/semibold_TextviewStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="@dimen/_5sdp"
                    android:layout_weight="1"
                    android:ellipsize="marquee"
                    android:gravity="center"
                    android:marqueeRepeatLimit="marquee_forever"
                    android:paddingVertical="@dimen/_5sdp"
                    android:singleLine="true"
                    android:text="@string/agree_terms"
                    android:textSize="@dimen/_14sdp" />
            </LinearLayout>

            <TextView
                android:id="@+id/tv_continue"
                style="@style/button_TextviewStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginHorizontal="@dimen/_50sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginBottom="@dimen/_20sdp"
                android:background="@drawable/next_btn"
                android:gravity="center"
                android:paddingVertical="@dimen/_13sdp"
                android:text="@string/continue_app" />


        </LinearLayout>
    </FrameLayout>

</LinearLayout>